# HomeWork_19.1

./: README.md  app.py  index.html  main.py  pyproject.toml  style.css
